[gd_scene load_steps=13 format=3 uid="uid://cawy6s6r24nn6"]

[ext_resource type="Script" path="res://UI/main menu/main_menu.gd" id="1_6nex4"]
[ext_resource type="Texture2D" uid="uid://c7gf2mgbakl6r" path="res://UI/main menu/ecran_titre4modif.png" id="1_nh08d"]
[ext_resource type="Shader" path="res://UI/shader/blur.gdshader" id="2_vam73"]
[ext_resource type="FontFile" uid="uid://cxsyqol86cuds" path="res://UI/BabaMediumPixels.ttf" id="3_01u6y"]
[ext_resource type="Texture2D" uid="uid://dfqx7yknmfmki" path="res://UI/main menu/image (3).png" id="4_2oq4k"]
[ext_resource type="Texture2D" uid="uid://db0p2rwpsfer1" path="res://UI/main menu/image.png" id="5_nhp8c"]
[ext_resource type="AudioStream" uid="uid://ccbjgfn6qxkc7" path="res://dossier/musique + ambiance/night music1.mp3" id="6_djiwy"]
[ext_resource type="AudioStream" uid="uid://bxnflel25l1dk" path="res://dossier/sfx/ui click 1.mp3" id="7_p3v2r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h032s"]
shader = ExtResource("2_vam73")
shader_parameter/lod = 0.0
shader_parameter/mix_percentage = 0.3

[sub_resource type="Animation" id="Animation_w0eud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/quit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(479, 887.21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/play:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(324, 669.51)]
}

[sub_resource type="Animation" id="Animation_8ghrk"]
resource_name = "show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/quit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(479, 887.21), Vector2(479, 487.21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/play:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(324, 669.51), Vector2(324, 319.51)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uejgc"]
_data = {
"RESET": SubResource("Animation_w0eud"),
"show": SubResource("Animation_8ghrk")
}

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6nex4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nh08d")

[node name="Label" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 174.0
offset_top = 581.0
offset_right = 949.0
offset_bottom = 604.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_01u6y")
theme_override_font_sizes/font_size = 20
text = "the html version works but encounters some bugs, we recommend the window version"

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 170.0
offset_top = 500.0
offset_right = 945.0
offset_bottom = 532.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_01u6y")
theme_override_font_sizes/font_size = 32
text = "Press any button"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_h032s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="quit" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = 563.21
offset_right = 97.0
offset_bottom = 621.21
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_2oq4k")

[node name="play" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = 345.51
offset_right = 252.0
offset_bottom = 467.51
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_nhp8c")

[node name="show button" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uejgc")
}
speed_scale = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_djiwy")
autoplay = true

[node name="ui" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_p3v2r")
volume_db = 5.0

[connection signal="pressed" from="ColorRect/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ColorRect/play" to="." method="_on_play_pressed"]
[connection signal="animation_finished" from="show button" to="." method="_on_show_button_animation_finished"]
